Reformat tests